<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_horizontal_login"
        android:layout_marginEnd="@dimen/padding_horizontal_login"
        android:orientation="vertical">

        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="@dimen/spacing_middle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/agregar"
                android:textSize="40sp"
                android:textStyle="bold"
                android:gravity="center"/>

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_title_black"
                    android:drawablePadding="@dimen/IconCreateAccountDim"
                    android:drawableTint="@color/colorBlack"
                    android:singleLine="true"
                    android:hint="@string/Titulo"
                    android:inputType="text"
                    tools:targetApi="m" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Valor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_money"
                    android:drawablePadding="@dimen/IconCreateAccountDim"
                    android:singleLine="true"
                    android:hint="@string/valor"
                    android:inputType="numberDecimal"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutPremio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Premio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_card_giftcard"
                    android:drawablePadding="@dimen/IconCreateAccountDim"
                    android:singleLine="true"
                    android:hint="@string/Premio"
                    android:inputType="text"/>

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutFecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_today_black"
                    android:drawablePadding="@dimen/IconCreateAccountDim"
                    android:singleLine="true"
                    android:hint="@string/Fecha"
                    android:inputType="date"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="@dimen/spacing_middle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/Cancelar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/cancelar"
                android:textColor="@color/editTextColorWhite"
                tools:ignore="ButtonStyle" />

            <View
                android:id="@+id/view"
                android:layout_toEndOf="@+id/Cancelar"
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle" />

            <Button
                android:id="@+id/Aceptar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_toEndOf="@+id/view"
                android:text="@string/aceptar"
                android:textColor="@color/editTextColorWhite"
                tools:ignore="ButtonStyle" />

        </RelativeLayout>

        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="@dimen/spacing_middle" />
    </LinearLayout>
</LinearLayout>