<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding_horizontal_login"
        android:layout_marginEnd="@dimen/padding_horizontal_login"
        android:orientation="vertical">

        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="@dimen/spacing_middle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/numero"
                android:textSize="40sp"
                android:textStyle="bold" />

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/layoutPersona"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/Persona"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_account_circle"
                    android:drawablePadding="@dimen/IconCreateAccountDim"
                    android:drawableTint="@color/colorBlack"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:singleLine="true"
                    tools:targetApi="m" />

            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle" />

            <RelativeLayout
                android:id="@+id/lyType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="3dp"
                    android:layout_marginBottom="2dp"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <Spinner
                        android:id="@+id/spnType"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:entries="@array/PAGO"
                        android:overlapAnchor="false"
                        android:spinnerMode="dropdown" />

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="@dimen/spacing_middle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/Cancelar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/cancelar"
                android:textColor="@color/editTextColorWhite"
                tools:ignore="ButtonStyle" />

            <View
                android:id="@+id/view"
                android:layout_toEndOf="@+id/Cancelar"
                android:layout_width="@dimen/spacing_middle"
                android:layout_height="@dimen/spacing_middle" />

            <Button
                android:id="@+id/Aceptar"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_toEndOf="@+id/view"
                android:text="@string/aceptar"
                android:textColor="@color/editTextColorWhite"
                tools:ignore="ButtonStyle" />

        </RelativeLayout>

        <View
            android:layout_width="@dimen/spacing_middle"
            android:layout_height="@dimen/spacing_middle" />
    </LinearLayout>
</LinearLayout>