<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="21dp"
    android:layout_marginEnd="21dp"
    android:layout_marginTop="5dp"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_row"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/thumbnail"
            android:src="@drawable/thumb_1_0"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/thumbnail"
                    android:src="@drawable/ic_title_black"/>

                <TextView
                    android:maxLines="1"
                    android:id="@+id/tvTitle"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="#616161"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>


            <LinearLayout
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/thumbnail"
                    android:src="@drawable/ic_card_giftcard"/>



                <TextView
                    android:maxLines="1"
                    android:id="@+id/tvPremio"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="#616161"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_margin="5dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/thumbnail"
                    android:src="@drawable/ic_money"/>

                <TextView
                    android:id="@+id/tvValor"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="#616161"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

            </LinearLayout>


            <LinearLayout
                android:layout_gravity="bottom"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables"
                android:layout_margin="5dp">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:contentDescription="@string/thumbnail"
                    android:src="@drawable/ic_today_black"/>



                <TextView
                    android:id="@+id/tvFecha"
                    android:layout_marginStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="#616161"
                    android:textSize="15sp"
                    android:textStyle="italic"/>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_row_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/delete_image"
                android:src="@drawable/ic_delete"
                android:tint="@color/grey_500"/>

            <ImageView
                android:id="@+id/img_row_add"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="7dp"
                android:contentDescription="@string/add_image"
                android:src="@drawable/ic_make_copy"
                android:tint="@color/grey_500"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>