<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Profile_Activity"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/logo"
        android:scaleType="centerCrop" />

    <View android:background="@color/indigo_800_overlay"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <androidx.appcompat.widget.Toolbar
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:id="@id/toolbar" android:fitsSystemWindows="false"
        android:layout_width="fill_parent" android:layout_height="?actionBarSize"
        app:contentInsetStartWithNavigation="0.0dip" app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:clipToPadding="false"
        android:padding="@dimen/spacing_mlarge"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:drawableStart="@drawable/ic_people"
                    android:drawablePadding="@dimen/IconCreateAccountDim"
                    android:drawableTint="@color/white"
                    android:hint="@string/nombre"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/User"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:drawableStart="@drawable/ic_people"
                    android:drawablePadding="@dimen/IconCreateAccountDim"
                    android:drawableTint="@color/white"
                    android:hint="@string/hint_username"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextWhite"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/spacing_xmlarge"
                    android:background="@drawable/edit_text_round_bg_overlay_white"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="@dimen/IconCreateAccountDim"
                    android:drawableTint="@color/white"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bt_submit"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-4.0dip"
                android:layout_marginTop="@dimen/spacing_mlarge"
                android:layout_marginRight="-4.0dip"
                android:background="@drawable/btn_rect_white_overlay"
                android:onClick="Guardar"
                android:text="@string/guardar"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>