<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transitions_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity"
    android:background="@color/blue">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerInParent="true"
                android:background="@drawable/logo"/>
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/Phone"
                        android:background="@drawable/edit_text_round_bg_overlay_white"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:drawableStart="@drawable/ic_account_circle"
                        android:drawablePadding="@dimen/IconCreateAccountDim"
                        android:singleLine="true"
                        android:hint="@string/hint_username"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="@dimen/SeparateText"
                    android:id="@+id/layoutPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:background="@drawable/edit_text_round_bg_overlay_white"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="@dimen/IconCreateAccountDim"
                        android:singleLine="true"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/bt_submit"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-4.0dip"
                    android:layout_marginTop="@dimen/spacing_mlarge"
                    android:layout_marginRight="-4.0dip"
                    android:background="@drawable/btn_rect_white_overlay"
                    android:onClick="Number"
                    android:text="@string/text_button_login"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>